Intial commit of Garbage Producer